4.0 Trunk from July 15th 2013

Changelog:

ADDED:
- #430 Function added to clone a content (many thanks to @QM-B)
- Content permissions for "view a content" and "edit a content" (many thanks to @QM-B)

FIXED:
- Visitor was not able to create a PDF
- Admin could not delete a content
- Breadcrumb bugfix in the module ACP
- Fixed a notice, if no category are created





3.1 Final from July 11th 2013

Changelog:

FIXED:
- If the sprockets module are installed was the field for the notification visible (many thanks to @madfish and @debianus)




3.0 Final from July 09th 2013

Changelog:

ADDED:
- Plugin for the Sitemap module (many thanks to @QM-B)
- A new block to select one content (many thanks to @QM-B)
- CSS lable for Tags added
- Toolbar option to display a Print icon in the detailpage
- Toolbar option to display a PDF icon in the detailpage
- Toolbar option to display a eMail icon in the detailpage
- New toolbar option to display a Share icon in the detailpage
- Subtitle for the content as an option added
- Module support URL added
- First sample page after a fresh module installation
- Two notification functions added, but the default value is OFF
- afterDelete function will delete all notification also, if an object was deleted
- Truncat information in the manual added

UPDATED:
- jquery sliderkit updated to version 1.9.2 (https://code.google.com/p/sliderkit/)
- Manual updated (recommendation for sprockets > 2.0, Truncan, ...)
- language files updated
- the comment function is as default NOT ON after the first module installation

FIXED:
- Fix incorrect padding of search results when looking at user profile page.
- Set the logged in User as default within the content form
- slider-demos.css is much more smaller now
- Bugfix for global search within StartHandler.php (submitter -> creator)
- Link to the comments improved
- The link from "title" and "read more" was brocken from the "block_select_content"
- The updated date was not set in the edit form